--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "practice registry",
   "scripts": {
-    "test": "test"
+    "test": "jest --forceExit --coverage --verbose --detectOpenHandles",
+    "watch-test": "npm run test -- --watchAll"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,25 @@
     "url": "https://github.com/afyahmis/practiceregistry/issues"
   },
   "homepage": "https://github.com/afyahmis/practiceregistry#readme",
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "reflect-metadata": "^0.1.12",
+    "typedi": "^0.8.0",
+    "typeorm": "^0.2.11",
+    "typeorm-typedi-extensions": "^0.2.1"
+  },
   "devDependencies": {
+    "@types/jest": "^23.3.12",
+    "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.18",
-    "lerna": "^3.10.5",
+    "concurrently": "^4.1.0",
+    "faker": "^4.1.0",
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.9",
+    "sqlite3": "^4.0.6",
+    "ts-jest": "^23.10.5",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.12.1",
     "typescript": "^3.2.2"
   }
 }
