--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typeorm-typedi-extensions": "^0.2.1"
   },
   "devDependencies": {
+    "@types/faker": "^4.1.4",
     "@types/jest": "^23.3.12",
     "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.18",
